crates/compiler/src/tests/e2e/good/0058_string_escape_sequences/main.gom
fn main() {
    string_println("hello\nworld");
    string_println("tab\there");
    string_println("backslash\\end");
    string_println("quote\"inside");
    let s = "\"";
    string_println(s);
}
