crates/compiler/src/tests/e2e/bad/0045_let_unknown_token_stmt/main.gom
package main;

fn main() {
    let s = "hello \
             \\world";
    string_println(s);
}
